<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:onClick="fecharTeclado">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroud"
        tools:context=".activity.FormAgendamento">

        <TextView
            android:id="@+id/txtAgendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/agendamento"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/containerComponents"
            style="@style/ContainerComponents"
            android:layout_width="367dp"
            android:layout_height="267dp"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAgendar" />

        <AutoCompleteTextView
            android:id="@+id/edit_nome"
            style="@style/Edit_Text"
            android:layout_width="335dp"
            android:layout_height="68dp"
            android:layout_marginTop="12dp"
            android:drawableRight="@drawable/ic_person"
            android:hint="@string/nome_inst"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/containerComponents"
            app:layout_constraintStart_toStartOf="@+id/containerComponents"
            app:layout_constraintTop_toTopOf="@+id/containerComponents" />

        <EditText
            android:id="@+id/edit_data"
            style="@style/Edit_Text"
            android:layout_width="335dp"
            android:layout_height="68dp"
            android:layout_marginTop="15dp"
            android:drawableRight="@drawable/ic_calendario"
            android:hint="@string/date"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="@+id/containerComponents"
            app:layout_constraintStart_toStartOf="@+id/containerComponents"
            app:layout_constraintTop_toBottomOf="@+id/edit_nome" />

        <EditText
            android:id="@+id/edit_hora"
            style="@style/Edit_Text"
            android:layout_width="335dp"
            android:layout_height="68dp"
            android:layout_marginBottom="10dp"
            android:drawableRight="@drawable/ic_time"
            android:hint="@string/hour"
            android:inputType="time"
            app:layout_constraintBottom_toBottomOf="@+id/containerComponents"
            app:layout_constraintEnd_toEndOf="@+id/containerComponents"
            app:layout_constraintStart_toStartOf="@+id/containerComponents"
            app:layout_constraintTop_toBottomOf="@+id/edit_data" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_salvar"
            style="@style/Button"
            android:layout_height="67dp"
            android:text="@string/salvar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.362"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerComponents" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>